# ckanext-event-audit

./: 404.html  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test.ini
.github/workflows/: test.yml
ckanext/event_audit/: cli.py  collection.py  config.py  config_declaration.yaml  config_schema.yaml  const.py  helpers.py  interfaces.py  model.py  plugin.py  types.py  utils.py  views.py
ckanext/event_audit/assets/: script.js  webassets.yml
ckanext/event_audit/exporters/: __init__.py  base.py  csv.py  json.py  tsv.py  xlsx.py
ckanext/event_audit/listeners/: __init__.py  api.py  database.py
ckanext/event_audit/logic/: validators.py
ckanext/event_audit/migration/event_audit/: alembic.ini  env.py
ckanext/event_audit/migration/event_audit/versions/: 001_9256fa265b84_create_event_table.py  9256fa265b84_create_event_table.py
ckanext/event_audit/repositories/: __init__.py  base.py  cloudwatch.py  postgres.py  redis.py
ckanext/event_audit/templates/event_audit/: config.html  event_audit_list.html
ckanext/event_audit/templates/event_audit/form/: tom_select.html
ckanext/event_audit/tests/: conftest.py  test_cli.py  test_config.py  test_interface.py  test_repositories.py  test_types.py  test_utils.py
ckanext/event_audit/tests/exporters/: test_csv.py  test_json.py  test_tsv.py  test_xlsx.py
ckanext/event_audit/tests/listeners/: test_api.py  test_model.py
ckanext/event_audit/tests/repositories/: test_cloudwatch.py  test_postgres.py  test_redis.py
cli/: index.html
configure/active_repo/: index.html
configure/async/: index.html
configure/cloudwatch/: index.html
configure/ignore/: index.html
configure/repository/: index.html
configure/tracking/: index.html
docs/: cli.md  index.md  install.md  interfaces.md  usage.md  utils.md  validators.md
docs/configure/: active_repo.md  admin_panel.md  async.md  cloudwatch.md  configuration.md  ignore.md  repository.md  tracking.md
docs/exporters/: basic.md  csv.md  json.md  tsv.md  xlsx.md
docs/repositories/: abstract.md  basic.md  cloudwatch.md  custom.md  postgres.md  redis.md  test.md
exporters/basic/: index.html
exporters/csv/: index.html
exporters/json/: index.html
exporters/tsv/: index.html
exporters/xlsx/: index.html
install/: index.html
interfaces/: index.html
repositories/abstract/: index.html
repositories/basic/: index.html
repositories/cloudwatch/: index.html
repositories/custom/: index.html
repositories/postgres/: index.html
repositories/redis/: index.html
repositories/test/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/cli/: index.html
site/configure/active_repo/: index.html
site/configure/admin_panel/: index.html
site/configure/async/: index.html
site/configure/cloudwatch/: index.html
site/configure/configuration/: index.html
site/configure/ignore/: index.html
site/configure/repository/: index.html
site/configure/tracking/: index.html
site/exporters/basic/: index.html
site/exporters/csv/: index.html
site/exporters/exporters/: index.html
site/exporters/json/: index.html
site/exporters/tsv/: index.html
site/exporters/xlsx/: index.html
site/install/: index.html
site/interfaces/: index.html
site/repositories/abstract/: index.html
site/repositories/basic/: index.html
site/repositories/cloudwatch/: index.html
site/repositories/custom/: index.html
site/repositories/postgres/: index.html
site/repositories/redis/: index.html
site/repositories/test/: index.html
site/search/: search_index.json
site/usage/: index.html
site/utils/: index.html
site/validators/: index.html
usage/: index.html
utils/: index.html
validators/: index.html
